# shade-dsl

./: Cargo.toml  Justfile  README.md
crates/ctx2d/: Cargo.toml
crates/ctx2d/src/: facade.rs  lib.rs
crates/ctx2d/src/base/: assets.rs  buffer.rs  depth.rs  facade.rs  gfx_bundle.rs  mod.rs  stream.rs  transform.rs
crates/ctx2d/src/brush/: rect.rs
crates/ctx2d/src/shaders/: base.rs  solid_rect.wgsl
crates/shade-dsl/: Cargo.toml
crates/shade-dsl/samples/: app.sdl
crates/shade-dsl/src/: lib.rs  main.rs
crates/shade-dsl/src/base/: arena.rs  const_ops.rs  def.rs  diag.rs  diagnostics.rs  gcx.rs  intern.rs  ir.rs  iso_intern.rs  mod.rs  parser.rs  pratt.rs  ptr.rs  session.rs  span.rs  symbol.rs  world.rs
crates/shade-dsl/src/base/alloc/: def.rs
crates/shade-dsl/src/base/analysis/: dp.rs  isomorphic.rs  memo.rs  mod.rs  resolver.rs
crates/shade-dsl/src/base/mem/: isomorphic.rs  mod.rs  obj.rs
crates/shade-dsl/src/base/syntax/: parser.rs  span.rs  symbol.rs
crates/shade-dsl/src/parse/: lower.rs  mod.rs
crates/shade-dsl/src/parse/ast/: keyword.rs  parser.rs  syntax.rs
crates/shade-dsl/src/parse/lower/: entry.rs  mod.rs  resolver.rs
crates/shade-dsl/src/parse/token/: mod.rs  parser.rs  syntax.rs
crates/shade-dsl/src/semantic/: mod.rs
crates/shade-dsl/src/semantic/analyzer/: bindings.rs  context.rs  mod.rs  typeck.rs
crates/shade-dsl/src/semantic/syntax/: body.rs  defs.rs  interned.rs  item.rs  mod.rs
crates/shade-dsl/src/typeck/: checker.rs  mod.rs
crates/shade-dsl/src/typeck/analysis/: eval.rs  mod.rs  tyck.rs
crates/shade-dsl/src/typeck/syntax/: func.rs  interner.rs  mod.rs  ty.rs  value.rs  value_alloc.rs
(+50 files in other folders)
