[workspace]
resolver = "2"
members = ["crates/ctx2d", "crates/ctx2d-utils", "crates/shade-dsl"]

[workspace.dependencies.late-struct]
git = "https://github.com/Radbuglet/arid.git"
rev = "4639d022f47a93c80de544809a910fab5afde245"

# [workspace.dependencies.late-struct]
# path = "../arid/crates/late-struct"
