[package]
name = "ctx2d"
version = "0.1.0"
edition = "2024"

[dependencies]
crevice = { version = "0.18.0", features = ["glam"] }
ctx2d-utils = { version = "0.1.0", path = "../ctx2d-utils" }
derive-where = "1.3.0"
glam = "0.30.2"
hashbrown = "0.15.2"
rustc-hash = "2.1.1"
smallvec = "1.15.0"
thunderdome = "0.6.1"
tracing = "0.1.41"
wgpu = { version = "24.0.1", default-features = false, features = ["wgsl"] }
