[package]
name = "shade-dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.17.0"
cbit = "0.1.0"
codespan-reporting = "0.11.1"
ctx2d-utils = { version = "0.1.0", path = "../ctx2d-utils" }
derive-where = "1.3.0"
index_vec = "0.1.4"
late-struct = { git = "https://github.com/Radbuglet/arid.git", version = "0.1.0" }
paste = "1.0.15"
scopeguard = "1.2.0"
termcolor = "1.4.1"
thiserror = "2.0.12"
thunderdome = "0.6.1"
unicode-xid = "0.2.6"
